--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
   "name": "expense-tracker",
-  "module": "index.ts",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "start": "bun ./server/index.ts",
-    "dev": "bun --watch ./server/index.ts"
+    "dev": "bun --filter='*' dev"
   },
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "@hono/zod-validator": "^0.2.1",
-    "hono": "^4.3.0",
-    "zod": "^3.23.6"
-  }
+  "workspaces": [
+    "packages/*"
+  ]
 }
