--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "server": "workspace:*"
+    "server": "workspace:*",
+    "@tanstack/router-vite-plugin": "^1.31.18"
   }
 }
