--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "bun ./src/index.ts",
-    "dev": "bun --watch ./src/index.ts"
+    "dev": "bun --watch ./src/index.ts",
+    "build": "bun build ./src/index.ts --outdir ./build"
   },
   "devDependencies": {
     "@types/bun": "latest"
