--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,7 +14,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-form": "^0.19.4",
     "@tanstack/react-query": "^5.35.1",
-    "@tanstack/react-router": "1.31.20",
+    "@tanstack/react-router": "^1.31.29",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
